--- a/whatsapp.css
+++ b/whatsapp.css
@@ -2,6 +2,11 @@
     margin: 0;
     padding: 0;
 }
+ body{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+ }
 .iphone{
     width: 300px;
     height: 600px;
@@ -150,19 +155,49 @@ button{
 .main{
     display: block;
     position: absolute; 
-    top: -520px;
-    right: -250%;
-    width: 280px;
+    bottom: 100%;
+    right: 0%;
+    width: 100%;
     background-color: white;
     /* height: 400px;
     /* background-color: blue; */
 }
-.main1,.main2,.main3,.main4{
+.main1{
     display: none;
     position: absolute; 
-    top: -520px;
+    bottom: 100%;
     right: 0%;
-    width: 300px;
+    width: 100%;
+    background-color: white;
+    /* height: 400px;
+    /* background-color: blue; */
+}
+.main2{
+    display: none;
+    position: absolute; 
+    bottom: 100%;
+    right: 0%;
+    width: 100%;
+    background-color: white;
+    /* height: 400px;
+    /* background-color: blue; */
+}
+.main3{
+    display: none;
+    position: absolute; 
+    bottom: 100%;
+    right: 0%;
+    width: 100%;
+    background-color: white;
+    /* height: 400px;
+    /* background-color: blue; */
+}
+.main4{
+    display: none;
+    position: absolute; 
+    bottom: 100%;
+    right: 0%;
+    width: 100%;
     background-color: white;
     /* height: 400px;
     /* background-color: blue; */
@@ -221,7 +256,7 @@ button{
 }
 .four{
     font-size: 10px;
-    position: relative;
+    /* position: relative; */
     /* margin-top: 5px; */
 }
 .icofont-chat{
